@@ -12,6 +12,7 @@
 * Added a graph represenation of rules (`:Concept`, `:Constraint` and `:Group`) executed during analysis including result status, severities and their relations to the store
 * Fixed an issue in AbstractPluginIT where project paths containing white spaces could not be used
 * Added links to required and provided concepts in HTML report
+* Delete Neo4j plugin directory and its content after shutting down embedded store
 
 == 2.2.0
 
